# Monochromatic_168x64

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/display_driver/: CMakeLists.txt  Kconfig.projbuild  display_driver.c
components/display_driver/include/: display_driver.h
components/lvgl_driver/: CMakeLists.txt  Kconfig.projbuild  lvgl_driver.c
components/lvgl_driver/include/: lvgl_driver.h
main/: CMakeLists.txt  main.c
